--- a/css/features.css
+++ b/css/features.css
@@ -254,11 +254,12 @@
   grid-template-columns: 1fr;
   gap: 32px;
   margin-top: 40px;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 .grid-container .grid-row .grid-col {
-  height: 244px;
-  width: 358px;
+  min-height: 244px;
+  max-width: 358px;
+  padding-inline: 20px;
   background-color: #ffffff;
   border-radius: 16px;
   box-shadow: 0px 8px 32px 0px rgba(118, 127, 154, 0.0784313725);
@@ -269,8 +270,8 @@
   gap: 16px;
 }
 .grid-container .grid-row .grid-col h1 {
-  height: 28px;
   width: 320px;
+  min-height: 45px;
   font-family: Euclid Circular A;
   font-size: 20px;
   font-weight: 400;
@@ -279,7 +280,6 @@
   color: #2E3A59;
 }
 .grid-container .grid-row .grid-col p {
-  height: 60px;
   width: 320px;
   font-family: Euclid Circular A;
   font-size: 14px;
@@ -410,8 +410,8 @@
   }
   .grid-container .grid-row .grid-col {
     box-shadow: 0px 8px 32px 0px rgba(118, 127, 154, 0.0784313725);
-    width: 390px;
-    height: 244px;
+    max-width: 390px;
+    min-height: 244px;
   }
   .grid-container .grid-row .grid-col h1 {
     height: 28px;
