--- a/css/home.css
+++ b/css/home.css
@@ -236,7 +236,7 @@
   letter-spacing: 0em;
   text-align: center;
   color: #2E3A59;
-  color: #222B45;
+  color: #222b45;
   margin-bottom: 32px;
 }
 .box1 .container1 .head1 span {
@@ -249,7 +249,7 @@
   line-height: 20px;
   letter-spacing: 0em;
   text-align: center;
-  color: #8F9BB3;
+  color: #8f9bb3;
   margin-bottom: 24px;
 }
 .box1 .container1 .btns1 {
@@ -391,8 +391,8 @@
   background-color: #ffd6d9;
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
 .social-networks .part1 {
   width: 90%;
@@ -406,8 +406,8 @@
   font-weight: 600;
   line-height: 40px;
   letter-spacing: 0em;
-  text-align: left;
   color: #2E3A59;
+  text-align: left;
 }
 .social-networks .part1 p {
   font-family: Euclid Circular A;
@@ -415,22 +415,20 @@
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0em;
-  text-align: left;
   color: #2E3A59;
+  text-align: left;
 }
 .social-networks .part1 .btn-lg {
   display: none;
 }
 .social-networks .part2 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 90%;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 8px;
 }
 .social-networks .part2 .social-network-card {
-  height: 96px;
-  width: 328px;
+  min-height: 96px;
+  max-width: 328px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -457,7 +455,7 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.social-networks .part2 .btn-mobile {
+.social-networks .btn-mobile {
   display: flex;
   display: flex;
   justify-content: center;
@@ -656,7 +654,7 @@
 }
 
 .comments-box {
-  background-color: #F7F9FC;
+  background-color: #f7f9fc;
   padding-top: 56px;
   padding-bottom: 96px;
 }
@@ -795,7 +793,7 @@
   height: 32px;
   background-color: white;
   padding: 6px 16px 6px 16px;
-  border: 1px solid #C5CEE0;
+  border: 1px solid #c5cee0;
   font-family: Euclid Circular A;
   font-size: 14px;
   font-weight: 400;
@@ -836,7 +834,7 @@
 .creative-box .subscribe input {
   height: 48px;
   width: 308px;
-  border: 1px solid #E4E9F2;
+  border: 1px solid #e4e9f2;
   border-radius: 8px;
   margin-top: 6px;
   font-family: Euclid Circular A;
@@ -845,7 +843,7 @@
   line-height: 20px;
   letter-spacing: 0em;
   text-align: left;
-  color: #8F9BB3;
+  color: #8f9bb3;
   padding-left: 20px;
 }
 .creative-box .subscribe .input-btn {
@@ -1016,6 +1014,17 @@
   color: #ffffff;
 }
 
+@media (min-width: 768px) {
+  .social-networks .part2 {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  .social-networks .part2 .social-network-card {
+    padding-right: 15px;
+    min-height: 96px;
+    max-width: 328px;
+  }
+}
 @media (min-width: 992px) {
   .box1 .container1 {
     width: 60%;
@@ -1169,15 +1178,15 @@
     color: #ffffff;
   }
   .social-networks .part2 {
-    width: 80%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 32px;
-    justify-content: flex-start;
   }
   .social-networks .part2 .social-network-card {
-    height: 112px;
-    width: 260px;
+    max-width: 260px;
+    height: 116px;
+    padding-right: 15px;
   }
-  .social-networks .part2 .btn-mobile {
+  .social-networks .btn-mobile {
     display: none;
   }
   .features-box .features-container {
